M #-: Dark mode. Small fixes.

--- a/assets/scss/_styles_fonts.scss
+++ b/assets/scss/_styles_fonts.scss
@@ -183,5 +183,4 @@
   font-style: normal;
   font-weight: 400;
   line-height: 21px;  
-  color: var(--code-font-color);  
 }
