--- a/assets/scss/sidebar-tree/_styles_project_sidebar-tree.scss
+++ b/assets/scss/sidebar-tree/_styles_project_sidebar-tree.scss
@@ -4,9 +4,12 @@
   @include body-small;
 }
 
+.td-sidebar {
+  border-right: 1px solid var(--border-color);
+}
+
 .td-sidebar-menu {
   padding-top: 14px;
-  @include body-small-medium; 
   a {
     color: var(--headings-color);
     &:hover {
@@ -18,7 +21,18 @@
   }
 }
 
-.ul-2 a {
+// Menu first level
+.ul-1 > .td-sidebar-nav__section > label > .td-sidebar-link {
+  @include body-small-medium;
+}
+
+// Menu NOT first level NOT last level
+.td-sidebar-link.td-sidebar-link__section {
+  @include body-small;
+}
+
+// Menu last level
+.td-sidebar-link.td-sidebar-link__page {
   @include body-small;
 }
 
@@ -42,7 +56,7 @@ nav.foldable-nav .ul-1 .with-child > label::before {
 // Scroll bar - Firefox
 .td-sidebar-nav {
   scrollbar-width: thin;
-  scrollbar-color: var(--Colors-border-primary, #E0E4E7) transparent;
+  scrollbar-color: var(--scrollbar-color) !important;
 }
 
 // Scroll bar - Edge, Chrome and Safari
@@ -57,6 +71,10 @@ nav.foldable-nav .ul-1 .with-child > label::before {
   border-radius: 96px;
 }
 
-.td-sidebar-nav .td-sidebar-link__page {
-  @include body-small-medium;
+// Modify height of the arrow to fix the line height
+.td-sidebar-nav__section label::before {
+  line-height: 20px !important;
+  height: 20px !important;
+  display: inline-block;
+  vertical-align: middle;
 }
